Fixed running outside of Eclipse
Achieved by changing how resources are loaded. Also added the local
directory to the classpath, so resources in the resources folder where
the jar is executed will be found.

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,31 @@
 			  </configuration>
 		    </execution>
 		  </executions>
-		</plugin>
+      </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <id>default-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>tech.kodiko.jgl2d.examples.ExampleApp</mainClass>
+              <addClasspath>true</addClasspath>
+            </manifest>
+            <manifestEntries>
+              <Class-Path>./</Class-Path>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <properties>
